fix: adjust day component icon and image on smaller devices

--- a/src/frontend/assets/styles.css
+++ b/src/frontend/assets/styles.css
@@ -154,7 +154,7 @@ meter::-webkit-meter-bar {
 
       img,
       svg {
-        @apply inline-block size-16;
+        @apply inline-block size-8 xl:size-16;
       }
     }
 
